# geodude

./: .gitignore  README.md  Taskfile.yml  build.bash  config.yml  export-config.yml  main.py  main.typ  main_template.typ  pyproject.toml  sample_job_description.txt  sig_qt.txt  skills_template.typ  template.typ
example/: skills.yml
example/education/: 2-northwestern.yml  prompt.md  template.yml
example/experiences/: 1-amazon-summer2025.yml  prompt.md  template.yml
example/projects/: 1-dog-cat-interfaces.yml  prompt.md  template.yml
example/prompts/: qd.md  qt.md  swe.md
geodude/compiler/: emit_typst.py
geodude/core/: cli.py  config.py  file_reader.py  yml_reader.py
geodude/core/exceptions/: __init__.py  cli_value_error.py  config_value_error.py  environment_value_error.py  path_error.py  request_value_error.py  value_error_wrapper.py
geodude/prompter/: job_role_prompter.py  llm_prompter.py  reorder_agent.py
